--- a/package.json
+++ b/package.json
@@ -6,15 +6,27 @@
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
     "form-for": "^1.0.2",
-    "nodemailer": "^2.3",
+    "nodemailer": "^6.7.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
